# parking-management-system

./: README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 04adbc8acffd_init.py  5a2c380e652f_init.py  729a72da024f_init.py  7f562963f834_init.py  838bf6f232b0_init.py  9023dcec2b34_init.py  9116077e33f5_init.py  a32810027d65_init.py  b65e4c1c7153_init.py  d644305cf253_init.py  e55cbb6f4dbf_init.py  fa8f71437957_init.py
src/: docker-compose.yml
src/auth/: dependencies_auth.py
src/auth/templates/: parking_exceded.html
src/conf/: messages.py
src/database/: db.py  models.py
src/repository/: 1.py  2.py  parking.py  plate_recognition.py
src/routes/: admin.py  email.py  email_message.py  message.py  parking.py  report.py  routes_auth.py  user.py  venicle.py
src/schemas/: car_schemas.py  photo_schemas.py
