[tool.poetry]
name = "parking-management-system"
version = "0.1.0"
description = ""
authors = ["Oleksandr Arshynov <oleksandrarshynov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
fastapi = "^0.110.2"
sqlalchemy = "^2.0.29"
uvicorn = "^0.29.0"
alembic = "^1.13.1"
cloudinary = "^1.40.0"
python-dotenv = "^1.0.1"
python-jose = "^3.3.0"
psycopg2-binary = "^2.9.9"
python-multipart = "^0.0.9"
pydantic-settings = "^2.2.1"
passlib = "^1.7.4"
bcrypt = "^4.1.2"
qrcode = "^7.4.2"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
pytest-xdist = "^3.5.0"
pytest-asyncio = "^0.23.6"
pytest = "^8.2.0"
fastapi-mail = "^1.4.1"
opencv-python = "^4.10.0.84"
imutils = "^0.5.4"
easyocr = "^1.7.1"
torch = "2.0.0"
matplotlib = "^3.9.2"
paddleocr = "^2.8.1"
scikit-learn = "^1.5.1"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
